--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.17.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "del": "^3.0.0",
+    "express": "^4.15.4",
     "jade": "~1.11.0",
     "mongodb": "^2.2.31",
     "monk": "^6.0.3",
